--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,27 +8,40 @@
   <link rel="stylesheet" href="https://bootswatch.com/4/simplex/bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/itemapi/front-end/">Home</a>
-            </li>
-        </div>
-      </nav>
+<!-- navbar  -->
+<nav class="navbar navbar-expand-md bg-dark">
+  <div class="navbar-header">
+    <a class="nav-link" href="/itemapi/front-end/">Home</a>
+  </div>
+</nav>
 <!-- fetch data from api 
 use jquery and js to insert them here as list item  -->
-
-
-      <div class="container">
-        <ul id="items" class="list-group"></ul>
+<div class="container">
+  <h1>Add Item</h1>
+    <form action="" id="itemForm">
+      <div class="form-group">
+        <label>Text</label>
+        <input type="text" id="text" class="form-control">
       </div>
+      <div class="form-group">
+        <label>Body</label>
+        <textarea type="text" id="body" class="form-control"></textarea>
+      </div>
+      <input type="submit" value="Submit" class="btn btn-primary">
+    </form>
+  <hr>
+  <ul id="items" class="list-group"></ul>
+ </div>
 
-  <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
-  <script type="text/javascript">
+<!-- jquery cdn  -->
+<script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
+<!-- our own code  -->
+<script type="text/javascript">
     $(document).ready(function(){
       getItems();
+
+
+      // Get Items from api 
       function getItems() {
         $.ajax({
           url:'http://localhost/itemapi/back-end/public/api/items'
