--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,85 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Item Manager</title>
-  <link rel="stylesheet" href="https://bootswatch.com/4/simplex/bootstrap.min.css">
-</head>
-<body>
-<!-- navbar  -->
-<nav class="navbar navbar-expand-md bg-dark">
-  <div class="navbar-header">
-    <a class="nav-link" href="/itemapi/front-end/">Home</a>
-  </div>
-</nav>
-<!-- fetch data from api 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Item Manager</title>
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/simplex/bootstrap.min.css"
+    />
+  </head>
+  <body>
+    <!-- navbar  -->
+    <nav class="navbar navbar-expand-md bg-dark">
+      <div class="navbar-header">
+        <a class="nav-link" href="/itemapi/front-end/">Home</a>
+      </div>
+    </nav>
+    <!-- fetch data from api 
 use jquery and js to insert them here as list item  -->
-<div class="container">
-  <h1>Add Item</h1>
-    <form action="" id="itemForm">
-      <div class="form-group">
-        <label>Text</label>
-        <input type="text" id="text" class="form-control">
-      </div>
-      <div class="form-group">
-        <label>Body</label>
-        <textarea type="text" id="body" class="form-control"></textarea>
-      </div>
-      <input type="submit" value="Submit" class="btn btn-primary">
-    </form>
-  <hr>
-  <ul id="items" class="list-group"></ul>
- </div>
+    <div class="container">
+      <h1>Add Item</h1>
+      <form action="" id="itemForm">
+        <div class="form-group">
+          <label>Text</label>
+          <input type="text" id="text" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label>Body</label>
+          <textarea type="text" id="body" class="form-control"></textarea>
+        </div>
+        <input type="submit" value="Submit" class="btn btn-primary" />
+      </form>
+      <hr />
+      <ul id="items" class="list-group"></ul>
+    </div>
 
-<!-- jquery cdn  -->
-<script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
-<!-- our own code  -->
-<script type="text/javascript">
-    $(document).ready(function(){
-      getItems();
+    <!-- jquery cdn  -->
+    <script
+      src="https://code.jquery.com/jquery-1.12.4.js"
+      integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
+      crossorigin="anonymous"
+    ></script>
+    <!-- our own code  -->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        getItems();
 
-      // Submit event 
-      $('#itemForm').on('submit', function(e){
-        e.preventDefault();
+        // Submit event
+        $('#itemForm').on('submit', function(e) {
+          e.preventDefault();
 
-        let text = $('#text').val();
-        let body = $('#body').val();
+          let text = $('#text').val();
+          let body = $('#body').val();
 
-        addItem(text, body);
-      });
-
-      // Insert items using API 
-      function addItem(text, body){
-        $.ajax({
-          method: 'POST',
-          url: 'http://localhost/itemapi/back-end/public/api/items',
-          data: {text: text, body: body}
-        }).done(function(item){
-          alert('Item # '+item.id+' added');
-          location.reload();
+          addItem(text, body);
         });
-      }
 
+        // Delete event
+        $('body').on('click', '.deleteLink', function(e) {
+          e.preventDefault();
+          console.log('delete');
+        });
 
-      // Get Items from api 
-      function getItems() {
-        $.ajax({
-          url:'http://localhost/itemapi/back-end/public/api/items'
-        }).done(function(items){
-          let output = '';
-          $.each(items, function(key, item){
-            output += `
-              <li class="list-group-item">
-                <strong>${item.text}: </strong>${item.body}
-              </li>
-            `
+        // Insert items using API
+        function addItem(text, body) {
+          $.ajax({
+            method: 'POST',
+            url: 'http://localhost/itemapi/back-end/public/api/items',
+            data: { text: text, body: body }
+          }).done(function(item) {
+            alert('Item # ' + item.id + ' added');
+            location.reload();
           });
-          $('#items').append(output);
-        })
-      }
-    });
-  </script>
-</body>
+        }
+
+        // Get Items from api
+        function getItems() {
+          $.ajax({
+            url: 'http://localhost/itemapi/back-end/public/api/items'
+          }).done(function(items) {
+            let output = '';
+            $.each(items, function(key, item) {
+              output += `
+              <li class="list-group-item">
+                <strong>${item.text}: </strong>${item.body} <a href="#" class="deleteLink" data-id="${item.id}">Delete</a>
+              </li>
+            `;
+            });
+            $('#items').append(output);
+          });
+        }
+      });
+    </script>
+  </body>
 </html>
