updated the url from http to https

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -44,11 +44,11 @@ use jquery and js to insert them here as list item  -->
     ></script>
     <!-- our own code  -->
     <script type="text/javascript">
-      $(document).ready(function() {
+      $(document).ready(function () {
         getItems();
 
         // Submit event
-        $('#itemForm').on('submit', function(e) {
+        $('#itemForm').on('submit', function (e) {
           e.preventDefault();
 
           let text = $('#text').val();
@@ -58,7 +58,7 @@ use jquery and js to insert them here as list item  -->
         });
 
         // Delete event
-        $('body').on('click', '.deleteLink', function(e) {
+        $('body').on('click', '.deleteLink', function (e) {
           e.preventDefault();
 
           let id = $(this).data('id');
@@ -66,25 +66,25 @@ use jquery and js to insert them here as list item  -->
           deleteItem(id);
         });
 
-        // Delete item through api 
-        function deleteItem(id){
+        // Delete item through api
+        function deleteItem(id) {
           $.ajax({
             method: 'POST',
-            url: 'http://localhost/itemapi/back-end/public/api/items/'+id,
-            data: {_method: 'DELETE'}
-          }).done(function(item) {
+            url: 'https://localhost/itemapi/back-end/public/api/items/' + id,
+            data: { _method: 'DELETE' },
+          }).done(function (item) {
             alert('Item Removed');
             location.reload();
-          });          
+          });
         }
 
         // Insert items using API
         function addItem(text, body) {
           $.ajax({
             method: 'POST',
-            url: 'http://localhost/itemapi/back-end/public/api/items',
-            data: { text: text, body: body }
-          }).done(function(item) {
+            url: 'https://localhost/itemapi/back-end/public/api/items',
+            data: { text: text, body: body },
+          }).done(function (item) {
             alert('Item # ' + item.id + ' added');
             location.reload();
           });
@@ -93,10 +93,10 @@ use jquery and js to insert them here as list item  -->
         // Get Items from api
         function getItems() {
           $.ajax({
-            url: 'http://localhost/itemapi/back-end/public/api/items'
-          }).done(function(items) {
+            url: 'https://localhost/itemapi/back-end/public/api/items',
+          }).done(function (items) {
             let output = '';
-            $.each(items, function(key, item) {
+            $.each(items, function (key, item) {
               output += `
               <li class="list-group-item">
                 <strong>${item.text}: </strong>${item.body} <a href="#" class="deleteLink" data-id="${item.id}">Delete</a>
